version/0.4.0b1/_sources/api/ansys/sam/sysml2/meta_model/state_usage/StateUsage.rst.txt






:class:`StateUsage`
===================


.. py:class:: ansys.sam.sysml2.meta_model.state_usage.StateUsage(element_id: str)

   Bases: :py:obj:`ansys.sam.sysml2.meta_model.action_usage.ActionUsage`


   
   Java class 'com.ansys.metamodel.sysml2.StateUsage'.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: StateUsage

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~do_action`
            - Get the do action property.
          * - :py:attr:`~entry_action`
            - Get the entry action property.
          * - :py:attr:`~exit_action`
            - Get the exit action property.
          * - :py:attr:`~state_definition`
            - Get the state definition property.
          * - :py:attr:`~is_parallel`
            - Get the is parallel property.
          * - :py:attr:`~set_is_parallel`
            - Get the set is parallel property.
          * - :py:attr:`~substate_usage`
            - Get the substate usage property.







Import detail
-------------

.. code-block:: python

    from ansys.sam.sysml2.meta_model.state_usage import StateUsage

Property detail
---------------

.. py:property:: do_action
   :type: ansys.sam.sysml2.meta_model.action_usage.ActionUsage


   
   Get the do action property.





   :Returns:

       "ActionUsage"
           Value of property do action.











   ..
       !! processed by numpydoc !!

.. py:property:: entry_action
   :type: ansys.sam.sysml2.meta_model.action_usage.ActionUsage


   
   Get the entry action property.





   :Returns:

       "ActionUsage"
           Value of property entry action.











   ..
       !! processed by numpydoc !!

.. py:property:: exit_action
   :type: ansys.sam.sysml2.meta_model.action_usage.ActionUsage


   
   Get the exit action property.





   :Returns:

       "ActionUsage"
           Value of property exit action.











   ..
       !! processed by numpydoc !!

.. py:property:: state_definition
   :type: list[Behavior]


   
   Get the state definition property.





   :Returns:

       :class:`python:list`\["Behavior"]
           Value of property state definition.











   ..
       !! processed by numpydoc !!

.. py:property:: is_parallel
   :type: bool


   
   Get the is parallel property.





   :Returns:

       :ref:`bool <python:bltin-boolean-values>`
           Value of property is parallel.











   ..
       !! processed by numpydoc !!

.. py:property:: set_is_parallel
   :type: bool


   
   Get the set is parallel property.





   :Returns:

       :ref:`bool <python:bltin-boolean-values>`
           Value of property set is parallel.











   ..
       !! processed by numpydoc !!

.. py:property:: substate_usage
   :type: bool


   
   Get the substate usage property.





   :Returns:

       :ref:`bool <python:bltin-boolean-values>`
           Value of property substate usage.











   ..
       !! processed by numpydoc !!






